refactor(logs): unify logging logic
